--- a/src/screens/appStack/Sightings.css
+++ b/src/screens/appStack/Sightings.css
@@ -582,6 +582,19 @@
   padding: 12px 20px 20px;
 }
 
+.sightingCard__bulkActions {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 4px;
+}
+
+.sightingCard__bulkDelete {
+  width: 100%;
+  max-width: 220px;
+  text-align: center;
+}
+
 
 .sightingCard__actionsButton {
   display: inline-flex;
